--- a/index.html
+++ b/index.html
@@ -25,80 +25,80 @@
         <div class="list-container" id="ailments-list">
             <h2>Ailments</h2>
             <div class="group">
-                <label for="ailments-search">Busca</label>
-                <input type="text" id="ailments-search" class="form-control" maxlength="50" oninput="filterList(this.value, 'ailments')">
+                <input type="text" id="ailments-search" class="form-control" maxlength="50">
+                <button onclick="search('ailments')">Buscar</button>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="armor-list">
             <h2>Armor</h2>
-            <div>
-                <label for="armor-search">Busca</label>
-                <input type="text" id="armor-search" class="form-control" maxlength="50" oninput="filterList(this.value, 'armor')">
+            <div class="group">
+                <input type="text" id="armor-search" class="form-control" maxlength="50">
+                <button onclick="search('armor')">Buscar</button>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="charms-list">
             <h2>Charms</h2>
             <div class="group">
-                <label for="charms-search">Busca</label>
-                <input type="text" id="charms-search" class="form-control" maxlength="50" oninput="filterList(this.value, 'charms')">
+                <input type="text" id="charms-search" class="form-control" maxlength="50">
+                <button onclick="search('charms')">Buscar</button>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="decorations-list">
             <h2>Decorations</h2>
             <div class="group">
-                <label for="decorations-search">Busca</label>
-                <input type="text" id="decorations-search" class="form-control" maxlength="50" oninput="filterList(this.value, 'decorations')">
+                <input type="text" id="decorations-search" class="form-control" maxlength="50">
+                <button onclick="search('decorations')">Buscar</button>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="events-list">
             <h2>Events</h2>
             <div class="group">
-                <label for="events-search">Busca</label>
-                <input type="text" id="events-search" class="form-control" maxlength="50" oninput="filterList(this.value, 'events')">
+                <input type="text" id="events-search" class="form-control" maxlength="50">
+                <button onclick="search('events')">Buscar</button>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="items-list">
             <h2>Items</h2>
             <div class="group">
-                <label for="items-search">Busca</label>
-                <input type="text" id="items-search" class="form-control" maxlength="50" oninput="filterList(this.value, 'items')">
+                <input type="text" id="items-search" class="form-control" maxlength="50">
+                <button onclick="search('items')">Buscar</button>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="locations-list">
             <h2>Locations</h2>
             <div class="group">
-                <label for="locations-search">Busca</label>
-                <input type="text" id="locations-search" class="form-control" maxlength="50" oninput="filterList(this.value, 'locations')">
+                <input type="text" id="locations-search" class="form-control" maxlength="50">
+                <button onclick="search('locations')">Buscar</button>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="monsters-list">
             <h2>Monsters</h2>
             <div class="group">
-                <label for="monsters-search">Busca</label>
-                <input type="text" id="monsters-search" class="form-control" maxlength="50" oninput="filterList(this.value, 'monsters')">
+                <input type="text" id="monsters-search" class="form-control" maxlength="50">
+                <button onclick="search('monsters')">Buscar</button>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="skills-list">
             <h2>Skills</h2>
             <div class="group">
-                <label for="skills-search">Busca</label>
-                <input type="text" id="skills-search" class="form-control" maxlength="50" oninput="filterList(this.value, 'skills')">
+                <input type="text" id="skills-search" class="form-control" maxlength="50">
+                <button onclick="search('skills')">Buscar</button>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="weapons-list">
             <h2>Weapons</h2>
             <div class="group">
-                <label for="weapons-search">Busca</label>
-                <input type="text" id="weapons-search" class="form-control" maxlength="50" oninput="filterList(this.value, 'weapons')">
+                <input type="text" id="weapons-search" class="form-control" maxlength="50">
+                <button onclick="search('weapons')">Buscar</button>
             </div>
             <ul></ul>
         </div>
