--- a/index.html
+++ b/index.html
@@ -25,80 +25,90 @@
         <div class="list-container" id="ailments-list">
             <h2>Ailments</h2>
             <div class="group">
-                <input type="text" id="ailments-search" class="form-control" maxlength="50">
+                <input type="text" id="ailments-search" class="form-control" maxlength="50" minlength="1">
                 <button onclick="search('ailments')">Buscar</button>
+                <p id="ailments-error-message" class="error-message"></p>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="armor-list">
             <h2>Armor</h2>
             <div class="group">
-                <input type="text" id="armor-search" class="form-control" maxlength="50">
+                <input type="text" id="armor-search" class="form-control" maxlength="50" minlength="1">
                 <button onclick="search('armor')">Buscar</button>
+                <p id="armor-error-message" class="error-message"></p>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="charms-list">
             <h2>Charms</h2>
             <div class="group">
-                <input type="text" id="charms-search" class="form-control" maxlength="50">
+                <input type="text" id="charms-search" class="form-control" maxlength="50" minlength="1">
                 <button onclick="search('charms')">Buscar</button>
+                <p id="charms-error-message" class="error-message"></p>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="decorations-list">
             <h2>Decorations</h2>
             <div class="group">
-                <input type="text" id="decorations-search" class="form-control" maxlength="50">
+                <input type="text" id="decorations-search" class="form-control" maxlength="50" minlength="1">
                 <button onclick="search('decorations')">Buscar</button>
+                <p id="decorations-error-message" class="error-message"></p>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="events-list">
             <h2>Events</h2>
             <div class="group">
-                <input type="text" id="events-search" class="form-control" maxlength="50">
+                <input type="text" id="events-search" class="form-control" maxlength="50" minlength="1">
                 <button onclick="search('events')">Buscar</button>
+                <p id="events-error-message" class="error-message"></p>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="items-list">
             <h2>Items</h2>
             <div class="group">
-                <input type="text" id="items-search" class="form-control" maxlength="50">
+                <input type="text" id="items-search" class="form-control" maxlength="50" minlength="1">
                 <button onclick="search('items')">Buscar</button>
+                <p id="items-error-message" class="error-message"></p>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="locations-list">
             <h2>Locations</h2>
             <div class="group">
-                <input type="text" id="locations-search" class="form-control" maxlength="50">
+                <input type="text" id="locations-search" class="form-control" maxlength="50" minlength="1">
                 <button onclick="search('locations')">Buscar</button>
+                <p id="locations-error-message" class="error-message"></p>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="monsters-list">
             <h2>Monsters</h2>
             <div class="group">
-                <input type="text" id="monsters-search" class="form-control" maxlength="50">
+                <input type="text" id="monsters-search" class="form-control" maxlength="50" minlength="1">
                 <button onclick="search('monsters')">Buscar</button>
+                <p id="monsters-error-message" class="error-message"></p>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="skills-list">
             <h2>Skills</h2>
             <div class="group">
-                <input type="text" id="skills-search" class="form-control" maxlength="50">
+                <input type="text" id="skills-search" class="form-control" maxlength="50" minlength="1">
                 <button onclick="search('skills')">Buscar</button>
+                <p id="skills-error-message" class="error-message"></p>
             </div>
             <ul></ul>
         </div>
         <div class="list-container" id="weapons-list">
             <h2>Weapons</h2>
             <div class="group">
-                <input type="text" id="weapons-search" class="form-control" maxlength="50">
+                <input type="text" id="weapons-search" class="form-control" maxlength="50" minlength="1">
                 <button onclick="search('weapons')">Buscar</button>
+                <p id="weapons-error-message" class="error-message"></p>
             </div>
             <ul></ul>
         </div>
